--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = "*"
-boto3 = "*"
-uvicorn = "*"
-mangum = "*"
-pytest = "*"
+fastapi = "0.85.0"
+boto3 = "1.24.81"
+uvicorn = "0.18.3"
+mangum = "0.15.1"
+pytest = "7.1.3"
 
 [dev-packages]
 
